outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-25_17-01-16/evaluations/problem_eval-4620383473707589811_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance based on historical visitation patterns, adaptive weighting that considers both local and global context, and a reinforcement learning-inspired scoring mechanism that rewards nodes with high potential for improving overall path quality.}
                                                                                                                                                                                                                                                           ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance based on historical visitation patterns, adaptive weighting that considers both local and global context, and a reinforcement learning-inspired scoring mechanism that rewards nodes with high potential for improving overall path quality.}
                                                                                                                                                                                                                                                           ^
SyntaxError: unmatched '}'
